@@ -70,6 +70,78 @@ class SSHBackend(duplicity.backend.Backend):
             else:
                 self.password = ''
 
+    def run_scp_command(self, commandline):
+        """ Run an scp command, responding to password prompts """
+        for n in range(1, globals.num_retries+1):
+            if n > 1:
+                # sleep before retry
+                time.sleep(30)
+            log.Info("Running '%s' (attempt #%d)" % (commandline, n))
+            child = pexpect.spawn(commandline, timeout = None)
+            cmdloc = 0
+            if globals.ssh_askpass:
+                state = "authorizing"
+            else:
+                state = "copying"
+            while 1:
+                if state == "authorizing":
+                    match = child.expect([pexpect.EOF,
+                                          "(?i)timeout, server not responding",
+                                          "(?i)pass(word|phrase .*):",
+                                          "(?i)permission denied",
+                                          "authenticity"])
+                    log.Debug("State = %s, Before = '%s'" % (state, child.before.strip()))
+                    if match == 0:
+                        log.Warn("Failed to authenticate")
+                        break
+                    elif match == 1:
+                        log.Warn("Timeout waiting to authenticate")
+                        break
+                    elif match == 2:
+                        child.sendline(self.password)
+                        state = "copying"
+                    elif match == 3:
+                        log.Warn("Invalid SSH password")
+                        break
+                    elif match == 4:
+                        log.Warn("Remote host authentication failed (missing known_hosts entry?)")
+                        break
+                elif state == "copying":
+                    match = child.expect([pexpect.EOF,
+                                          "(?i)timeout, server not responding",
+                                          "stalled",
+                                          "authenticity",
+                                          "ETA"])
+                    log.Debug("State = %s, Before = '%s'" % (state, child.before.strip()))
+                    if match == 0:
+                        break
+                    elif match == 1:
+                        log.Warn("Timeout waiting for response")
+                        break
+                    elif match == 2:
+                        state = "stalled"
+                    elif match == 3:
+                        log.Warn("Remote host authentication failed (missing known_hosts entry?)")
+                        break
+                elif state == "stalled":
+                    match = child.expect([pexpect.EOF,
+                                          "(?i)timeout, server not responding",
+                                          "ETA"])
+                    log.Debug("State = %s, Before = '%s'" % (state, child.before.strip()))
+                    if match == 0:
+                        break
+                    elif match == 1:
+                        log.Warn("Stalled for too long, aborted copy")
+                        break
+                    elif match == 2:
+                        state = "copying"
+            child.close(force = True)
+            if child.exitstatus == 0:
+                return
+            log.Warn("Running '%s' failed (attempt #%d)" % (commandline, n))
+        log.Warn("Giving up trying to execute '%s' after %d attempts" % (commandline, globals.num_retries))
+        raise BackendException("Error running '%s'" % commandline)
+
     def run_sftp_command(self, commandline, commands):
         """ Run an sftp command, responding to password prompts, passing commands from list """
         maxread = 2000 # expect read buffer size
@@ -126,6 +198,12 @@ class SSHBackend(duplicity.backend.Backend):
         raise BackendException("Error running '%s'" % commandline)
 
     def put(self, source_path, remote_filename = None):
+        if globals.use_scp:
+            self.put_scp(source_path, remote_filename = None)
+        else:
+            self.put_sftp(source_path, remote_filename = None)
+
+    def put_sftp(self, source_path, remote_filename = None):
         """Use sftp to copy source_dir/filename to remote computer"""
         if not remote_filename:
             remote_filename = source_path.get_filename()
@@ -136,7 +214,22 @@ class SSHBackend(duplicity.backend.Backend):
                                      self.host_string))
         self.run_sftp_command(commandline, commands)
 
+    def put_scp(self, source_path, remote_filename = None):
+        """Use scp to copy source_dir/filename to remote computer"""
+        if not remote_filename:
+            remote_filename = source_path.get_filename()
+        commandline = "%s %s %s %s:%s%s" % \
+            (globals.scp_command, globals.ssh_options, source_path.name, self.host_string,
+             self.remote_prefix, remote_filename)
+        self.run_scp_command(commandline)
+
     def get(self, remote_filename, local_path):
+        if globals.use_scp:
+            self.get_scp(remote_filename, local_path)
+        else:
+            self.get_sftp(remote_filename, local_path)
+
+    def get_sftp(self, remote_filename, local_path):
         """Use sftp to get a remote file"""
         commands = ["get %s%s %s" %
                     (self.remote_prefix, remote_filename, local_path.name)]
@@ -144,6 +237,17 @@ class SSHBackend(duplicity.backend.Backend):
                                      globals.ssh_options,
                                      self.host_string))
         self.run_sftp_command(commandline, commands)
+        local_path.setdata()
+        if not local_path.exists():
+            raise BackendException("File %s not found locally after get "
+                                   "from backend" % local_path.name)
+
+    def get_scp(self, remote_filename, local_path):
+        """Use scp to get a remote file"""
+        commandline = "%s %s %s:%s%s %s" % \
+            (globals.scp_command, globals.ssh_options, self.host_string, self.remote_prefix,
+             remote_filename, local_path.name)
+        self.run_scp_command(commandline)
         local_path.setdata()
         if not local_path.exists():
             raise BackendException("File %s not found locally after get "
